fixed header spacing

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -17,10 +17,10 @@ body {
 }
 
 #logo {
-    margin-top: -5vh;
+    margin-top: -4.5vh;
     width: 400px;
     height: auto;
-    margin-bottom: -9vh;
+    margin-bottom: -6.5vh;
 }
 
 #prod, #prog, #te, #cont {
